
 - Updated translations (ca, sv, uk).
 - Fixed the "Save As" function saving to the wrong folder in the URL Grabber.
 - Fixed a bug in the "Copy Selected Link" URL right-click on non-ASCII chars.
 - Fixed small bug: #100239 buffer overflow in setup dialog.
 - 
 - 
 - Plugin API:
  * Added "modes" to xchat_get_info(). Returns the current channel modes, if
    they are known.
 - Perl (Lian Wan Situ)
  * Execute the shutdown callback before removing the hooks so commands
    created by the script can be used in the callback.


------------------------------------------------------------------------------
 2.8.0 - 03/Jan/2007
------------------------------------------------------------------------------

 - Updated translations (cs, de, gl, hu).
 - XChat now requires at least GTK+ 2.10.
 - Added a system tray icon (aka Notification Area). This is probably the
   biggest feature addition in this series. Also added a /TRAY command so
   scripts can manipulate the icon.
 - Added partial support for numeric 005 token ELIST (min users only).
 - Brand new channel list window: GtkTreeView, nicer layout, less CPU power
   when downloading very large list, uses less memory, supports regexp/
   patternmatch/substring search and supports downloading LIST with minusers to
   save time (only on some networks that support ELIST).
 - Overhauled URL opening on Unix, it now tries xdg-open first, then auto-
   detects Gnome or KDE to run gnome-open or kfmclient. URLs with quotes
   should also work now (changed to execv()).
 - Settings: Warn the user when trying to put the tree on the top/bottom.
 - Fixed DCC ack reading so it doesn't use MSG_PEEK.
 - Channel modes are no longer shown in the titlebar if they contain a key.
 - Added /GUI APPLY command, which does that same as pressing OK in the
   settings window (e.g use it after /set). Mainly for scripters.
 - Allow changing the logging folder if the log filename is set to a full path
   in the settings window (starts with a '/').