@@ -827,7 +827,7 @@ Changed in 2.6.1. If servname is NULL, it finds the channel (or query) by the gi
 	<tr><td width="18%">away</td><td>away reason or NULL if you are not away.</td></tr>
 	<tr><td>channel</td><td>current channel name.</td></tr>
 	<tr><td>charset</td><td>character-set used in the current context (since 2.4.2).</td></tr>
-	<tr><td>event_text &lt;name></td><td>text event format string for <i>name</i> (since 2.8.0).</td></tr>
+	<tr><td>event_text &lt;name></td><td>text event format string for <i>name</i> (since 2.8.2).</td></tr>
 	<tr><td>host</td><td>real hostname of the server you connected to.</td></tr>
 	<tr><td>inputbox</td><td>the input-box contents, what the user has typed (since 2.4.1).</td></tr>
 	<tr><td>libdirfs</td><td>library directory. e.g. /usr/lib/xchat. The same directory used for auto-loading plugins (since 2.4.0).<small>This string isn't necessarily UTF-8, but local file system encoding.</small></td></tr>
